--- a/front_deve/src/App.css
+++ b/front_deve/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  height: 10vmin;
+  height: 20vmin;
   pointer-events: none;
 }
 
@@ -14,8 +14,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 10vh;
+  background-color: #000000;
+  min-height: 20vh;
   display: flex;
   flex-direction: column;
   align-items: center;
